<resources>
    <string name="app_name">اورژانس برق و تاسیسات رفسنجان</string>
    <!-- Strings related to login -->
    <string name="prompt_mobile_number_login">شماره تلفن همراه</string>
    <string name="prompt_password">رمز عبور</string>
    <string name="prompt_password2">تکرار رمز عبور</string>
    <string name="action_sign_in">ورود</string>
    <string name="action_sign_up">ثبت نام</string>
    <string name="error_invalid_email">ایمیل وارد شده نادرست است</string>
    <string name="error_invalid_password">رمز عبور باید حداقل 6 کارکتر باشد</string>
    <string name="error_incorrect_password">رمز عبور نادرست است</string>
    <string name="error_field_required">این فیلد خالی است</string>
    <string name="error_invalid_mobile_number">شماره تلفن همراه وارد شده باید به صورت 09123456789 باشد</string>
    <string name="error_not_a_user">کاربری با این تلفن همراه وجود ندارد</string>

    <!-- Strings related to register -->
    <string name="prompt_name">نام</string>
    <string name="prompt_lastname">نام خانوادگی</string>
    <string name="prompt_email">ایمیل</string>
    <string name="prompt_mobile_number_register">شماره تلفن همراه</string>
    <string name="prompt_usertype">نوع کاربر</string>
    <string name="error_repassword">تکرار رمزعبور نادرست است</string>


    <string name="item_product_name">نام کالا</string>
    <string name="item_product_price">قیمت</string>
    <string name="item_product_info">توضیحات</string>


    <!-- navigation menu items -->
    <string name="nav_menu_home">صفحه اصلی</string>
    <string name="nav_menu_profile">پروفایل</string>
    <string name="nav_menu_purchases">سوابق خرید</string>
    <string name="nav_menu_about_us">درباره ما</string>
    <string name="nav_menu_logout">خروج از حساب</string>


    <string name="no_repair_is_underway">در حال حاضر هیچ تعمیری در حال انجام نیست، برای درخواست انجام تعمیرات کلید + را بزنید</string>

    <string name="service_item_status_title">وضعیت:</string>
    <string name="service_item_type_title">نوع تعمیر:</string>
    <string name="service_item_info_title">توضیحات:</string>

    <string name="service_request_frag_info_et">توضیحات</string>
    <string name="service_request_frag_next_step_btn">مرحله بعد</string>
    <string name="btn_update_user_profile_frag">بروزرسانی</string>
    <string name="btn_submit_text_location_frag">ثبت درخواست</string>
    <string name="bottom_appbar_menu_select_all">انتخاب همه</string>
    <string name="bottom_appbar_menu_delete">حذف</string>
    <string name="no_repair_request_at_all">هیچ درخواستی وجود ندارد</string>
    <string name="no_service_available">در حال حاضر شما هیچ خدماتی ارائه نمیدهید!</string>

    <!-- Review Request Layout view hint and button texts -->
    <string name="status_title_review_request">وضعیت</string>
    <string name="type_title_review_request">نوع سرویس</string>
    <string name="user_mobile_number_title_review_request">شماره همراه کاربر</string>
    <string name="request_time_title_review_request">زمان ارسال درخواست</string>
    <string name="info_title_review_request">توضیحات</string>
    <string name="change_status_btn_review_request">تغییر وضعیت</string>
    <string name="call_btn_review_request">تماس</string>

    <!-- bottom sheet items -->
    <string name="bs_item_profile_">حساب کاربری</string>
    <string name="bs_item_contact_us">تماس با ما</string>
    <string name="bs_item_about_us">درباره ما</string>
    <string name="bs_item_logout">خروج از حساب کاربری</string>
    <string name="empty_image_view_pager_add_product">در حال حاضر هیچ عکسی برای کالا ثبت نشده است.</string>


</resources>
