<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_menu_home" />
    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_menu_profile" />
    <item
        android:id="@+id/menu_purchases"
        android:icon="@drawable/ic_purchases"
        android:title="@string/nav_menu_purchases" />
    <item
        android:id="@+id/menu_about_us"
        android:icon="@drawable/ic_about_us"
        android:title="@string/nav_menu_about_us" />
    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/nav_menu_logout" />

</menu>