<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/standard_margin_4x"
    tools:context=".view.fragment.LoginFragment">


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <!-- Login progress -->
            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_profile"
                app:boxBackgroundColor="@color/colorWhite">

                <EditText
                    android:id="@+id/et_mobile_number_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="12"
                    android:hint="@string/prompt_mobile_number_login"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                app:startIconDrawable="@drawable/ic_password"
                app:boxBackgroundColor="@color/colorWhite">

                <EditText
                    android:id="@+id/et_password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:maxLength="30"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/error_incorrect_password"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_sign_in_login"
                android:layout_width="120dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/standard_margin_4x"
                android:fontFamily="@font/shabnam_bold"
                android:textSize="@dimen/button_text_size"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:backgroundTint="@color/colorPrimary"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btn_sign_up_login"
                android:layout_width="120dp"
                android:layout_gravity="center"
                android:layout_height="@dimen/button_height"
                android:fontFamily="@font/shabnam_bold"
                android:textSize="@dimen/button_text_size"
                android:text="@string/action_sign_up"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:backgroundTint="@color/colorPrimary"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>